[project]
name = "comfyui-apgscaling"
description = "ComfyUI nodes to use [a/APG scaling](https://huggingface.co/papers/2410.02416) for CFG, allowing for better image quality with higher CFG."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/logtd/ComfyUI-APGScaling"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-APGScaling"
Icon = ""
